...

    -->
    <group
        android:id="@+id/drawer_menu_standard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_files"
            android:icon="@drawable/all_files"
            android:orderInCategory="0"
            android:title="@string/drawer_item_all_files"/>
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_activity"
...
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/nav_favorites"
            android:orderInCategory="0"
            android:title="@string/drawer_item_favorites"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/nav_photos"
            android:title="@string/drawer_item_gallery" />
        <item
            android:id="@+id/nav_shared"
            android:orderInCategory="0"
            android:icon="@drawable/nav_shared"
...
